@@ -47,8 +47,7 @@ module Fairy
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 64000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
-##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
-  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
+##CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
 
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
@@ -57,6 +56,9 @@ module Fairy
 ##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
 #CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
+
+##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
+  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 
 ##CONF.SORT_SAMPLING_MIN = 100
 ##CONF.SORT_SAMPLING_MAX = 10000
@@ -79,6 +81,7 @@ module Fairy
 ##CONF.LOG_LEVEL = :DEBUG
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
+#CONF.LOG_IMPORT_NTIMES_POP = 1
 
 ##  CONF.PROCESSOR_MON_ON = true
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
