@@ -72,6 +72,8 @@ module Fairy
     def_prop :ONMEMORY_SIZEDQUEUE_SIZE
     def_prop :FILEBUFFEREDQUEUE_THRESHOLD
 
+    def_prop :LOCAL_INPUT_FILE_BUFFER_SIZE
+
     def_prop :N_MOD_GROUP_BY
     def_prop :HASH_MODULE
     def_prop :MOD_GROUP_BY_BUFFERING_POLICY
@@ -191,12 +193,14 @@ module Fairy
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
   CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
-  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
+  CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
 
   CONF.N_MOD_GROUP_BY = 5
   CONF.HASH_MODULE = "fairy/share/hash-md5"
   CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
   CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
+
+  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
 
   CONF.SORT_SAMPLING_MIN = 100
   CONF.SORT_SAMPLING_MAX = 10000
