@@ -1,3 +1,8 @@
+Wed Jun  3 15:24:34 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* local-file-input.rb, n-local-file-input.rb: [SR#82] local-fileで
+	  のまとめ送り対応.
+
 Tue Jun  2 17:18:49 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* test/test-map.rb, test/test-minifairy.rb: 追加
